Add quick option for Add Fieldset dialog

--- a/app/views/archetype.config.fieldset.dialog.html
+++ b/app/views/archetype.config.fieldset.dialog.html
@@ -36,7 +36,10 @@
 		<div>
             <label for="archetypeAdvancedOptionsMemberGroups"><input type="checkbox" id="archetypeAdvancedOptionsMemberGroups" ng-model="dialogData.model.enableMemberGroups" /><archetype-localize key="enableMemberGroups">Enable Member Group Access?</archetype-localize><small><archetype-localize key="enableMemerGroupsDescription">Allows fieldsets to be displayed for specified member groups only.</archetype-localize></small></label>
         </div>
-        
+    		<div>
+            <label for="archetypeAdvancedOptionsUseAddDialog"><input type="checkbox" id="archetypeAdvancedOptionsUseAddDialog" ng-model="dialogData.model.enableAddDialog" /><archetype-localize key="enableAddDialog">Enable Add Dialog?</archetype-localize><small><archetype-localize key="enableAddDialogDescription">Uses a dialog instead of modal for adding fieldsets.</archetype-localize></small></label>
+        </div>
+
         <h4><archetype-localize key="multipleFieldsets">Multiple fieldsets</archetype-localize></h4>
         <div>
             <label for="archetypeAdvancedOptionsMultipleFieldsets"><input type="checkbox" id="archetypeAdvancedOptionsMultipleFieldsets" ng-model="dialogData.model.enableMultipleFieldsets"/><archetype-localize key="enableMultipleFieldsets">Enable Multiple Fieldsets?</archetype-localize><small><archetype-localize key="enableMultipleFieldsetsDescription">Allows multiple types of fieldsets within this archetype.</archetype-localize></small></label>
