--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -122,4 +122,13 @@
             </ul>
         </div>
     </div>
+
+    <!-- Fielset dialog -->
+    <umb-overlay
+      ng-if="overlayDialog.show"
+      model="overlayDialog"
+      view="overlayDialog.view"
+      position="right">
+    </umb-overlay>
+
 </div>
