--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -569,3 +569,86 @@
 .archetype-dialog {
     margin: 10px;
 }
+
+.archetypeAddDialog {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      margin: 0;
+      padding: 10px;
+      padding-top: 10px;
+      padding-left: 15px;
+      display: block;
+      border-bottom: 2px solid #ddd;
+
+      &:hover {
+        cursor: pointer;
+        background-color: #e0ebff;
+      }
+
+      .preview {
+        float: right;
+      }
+
+      .content {
+        width: 225px;
+        float: left;
+
+        small { display: block; }
+
+        h3 {
+          font-size: 18px;
+          font-weight: bold;
+          margin-bottom: 0;
+          margin-top: 0;
+        }
+
+        .icon {
+          font-size: 19px;
+          position: relative;
+          top: 2px;
+        }
+      }
+
+    }
+  }
+
+
+  .groups {
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    background-color: #eceff1;
+
+    li {
+      border: 0 none;
+      display: inline-block;
+      text-align: center;
+      line-height: 48px;
+      height: 48px;
+      padding: 0;
+      margin: 0;
+      padding-left: 10px;
+      padding-right: 10px;
+      text-transform: uppercase;
+      &:hover {
+        border-bottom: 2px solid #e0ebff;
+      }
+      a {
+        color: #333;
+      }
+      &.active {
+        border-bottom: 2px solid #ee6e73;
+        a {
+          color: #ee6e73;
+          font-weight: bold;
+        }
+      }
+    }
+
+  }
+}
