Style updates for add dialog

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -591,13 +591,17 @@
 
       .preview {
         float: right;
+        img {
+          margin-top: 10px;
+          border: 1px solid #2e8aea;
+        }
       }
 
       .content {
         width: 225px;
         float: left;
 
-        small { display: block; }
+        small { display: block; color: #888; }
 
         h3 {
           font-size: 18px;
